Curso de Node JS v2

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div>
                 <h3>1. Instalación de Node.js</h3>
                 <video controls>
-                    <source src="../1. Introducción a Nodejs/1. Instalación de Node.js.mp4" type="video/mp4">
+                    <source src="./1. Introducción a Nodejs/1. Instalación de Node.js.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -75,7 +75,7 @@
             <div>
                 <h3>2. Hola mundo en Node.js</h3>
                 <video controls>
-                    <source src="../1. Introducción a Nodejs/2. Hola mundo en Node.js.mp4" type="video/mp4">
+                    <source src="./1. Introducción a Nodejs/2. Hola mundo en Node.js.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -83,7 +83,7 @@
             <div>
                 <h3>3. Módulos de núcleo (Core modules)</h3>
                 <video controls>
-                    <source src="../1. Introducción a Nodejs/3. Módulos de núcleo (Core modules).mp4" type="video/mp4">
+                    <source src="./1. Introducción a Nodejs/3. Módulos de núcleo (Core modules).mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -91,7 +91,7 @@
             <div>
                 <h3>4. Configurando npm en nuestro proyecto</h3>
                 <video controls>
-                    <source src="../1. Introducción a Nodejs/4. Configurando npm en nuestro proyecto.mp4" type="video/mp4">
+                    <source src="./1. Introducción a Nodejs/4. Configurando npm en nuestro proyecto.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -99,7 +99,7 @@
             <div>
                 <h3>5. Módulos locales (Local modules)</h3>
                 <video controls>
-                    <source src="../1. Introducción a Nodejs/5. Módulos locales (Local modules).mp4" type="video/mp4">
+                    <source src="./1. Introducción a Nodejs/5. Módulos locales (Local modules).mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -107,7 +107,7 @@
             <div>
                 <h3>6. Importaciones parciales y totales</h3>
                 <video controls>
-                    <source src="../1. Introducción a Nodejs/6. Importaciones parciales y totales.mp4" type="video/mp4">
+                    <source src="./1. Introducción a Nodejs/6. Importaciones parciales y totales.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -115,7 +115,7 @@
             <div>
                 <h3>7. Arrow functions</h3>
                 <video controls>
-                    <source src="../1. Introducción a Nodejs/7. Arrow functions.mp4" type="video/mp4">
+                    <source src="./1. Introducción a Nodejs/7. Arrow functions.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -123,7 +123,7 @@
             <div>
                 <h3>8. Constantes</h3>
                 <video controls>
-                    <source src="../1. Introducción a Nodejs/8. Constantes.mp4" type="video/mp4">
+                    <source src="./1. Introducción a Nodejs/8. Constantes.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -131,7 +131,7 @@
             <div>
                 <h3>9. Capturando las peticiones a nuestra app</h3>
                 <video controls>
-                    <source src="../1. Introducción a Nodejs/9. Capturando las peticiones a nuestra app.mp4" type="video/mp4">
+                    <source src="./1. Introducción a Nodejs/9. Capturando las peticiones a nuestra app.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -139,7 +139,7 @@
             <div>
                 <h3>10. Módulos de terceros (packages)</h3>
                 <video controls>
-                    <source src="../1. Introducción a Nodejs/10. Módulos de terceros (packages).mp4" type="video/mp4">
+                    <source src="./1. Introducción a Nodejs/10. Módulos de terceros (packages).mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
