--- a/index2.html
+++ b/index2.html
@@ -67,7 +67,7 @@
             <div>
                 <h3>1. Introducción de la sección</h3>
                 <video controls>
-                    <source src="../2. Desarrollo backend con Express/1. Introducción de la sección.mp4" type="video/mp4">
+                    <source src="./2. Desarrollo backend con Express/1. Introducción de la sección.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -75,7 +75,7 @@
             <div>
                 <h3>2. Creando una app express</h3>
                 <video controls>
-                    <source src="../2. Desarrollo backend con Express/2. Creando una app express.mp4" type="video/mp4">
+                    <source src="./2. Desarrollo backend con Express/2. Creando una app express.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -83,7 +83,7 @@
             <div>
                 <h3>3. Rutas de nuestra app con express</h3>
                 <video controls>
-                    <source src="../2. Desarrollo backend con Express/3. Rutas de nuestra app con express.mp4" type="video/mp4">
+                    <source src="./2. Desarrollo backend con Express/3. Rutas de nuestra app con express.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -91,7 +91,7 @@
             <div>
                 <h3>4. APIs</h3>
                 <video controls>
-                    <source src="../2. Desarrollo backend con Express/4. APIs.mp4" type="video/mp4">
+                    <source src="./2. Desarrollo backend con Express/4. APIs.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -99,7 +99,7 @@
             <div>
                 <h3>5. Ruta de tipo POST</h3>
                 <video controls>
-                    <source src="../2. Desarrollo backend con Express/5. Ruta de tipo POST.mp4" type="video/mp4">
+                    <source src="./2. Desarrollo backend con Express/5. Ruta de tipo POST.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -107,7 +107,7 @@
             <div>
                 <h3>6. reqres.in - lista de usuarios</h3>
                 <video controls>
-                    <source src="../2. Desarrollo backend con Express/6. reqres.in - lista de usuarios.mp4" type="video/mp4">
+                    <source src="./2. Desarrollo backend con Express/6. reqres.in - lista de usuarios.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -115,7 +115,7 @@
             <div>
                 <h3>7. reqres.in - usuario por id</h3>
                 <video controls>
-                    <source src="../2. Desarrollo backend con Express/7. reqres.in - usuario por id.mp4" type="video/mp4">
+                    <source src="./2. Desarrollo backend con Express/7. reqres.in - usuario por id.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -123,7 +123,7 @@
             <div>
                 <h3>8. reqres.in - lista de productos</h3>
                 <video controls>
-                    <source src="../2. Desarrollo backend con Express/8. reqres.in - lista de productos.mp4" type="video/mp4">
+                    <source src="./2. Desarrollo backend con Express/8. reqres.in - lista de productos.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -131,7 +131,7 @@
             <div>
                 <h3>9. reqres.in - producto por id</h3>
                 <video controls>
-                    <source src="../2. Desarrollo backend con Express/9. reqres.in - producto por id.mp4" type="video/mp4">
+                    <source src="./2. Desarrollo backend con Express/9. reqres.in - producto por id.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -139,7 +139,7 @@
             <div>
                 <h3>10. reqres.in - crear un producto</h3>
                 <video controls>
-                    <source src="../2. Desarrollo backend con Express/10. reqres.in - crear un producto.mp4" type="video/mp4">
+                    <source src="./2. Desarrollo backend con Express/10. reqres.in - crear un producto.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -147,7 +147,7 @@
             <div>
                 <h3>11. http methods</h3>
                 <video controls>
-                    <source src="../2. Desarrollo backend con Express/11. http methods.mp4" type="video/mp4">
+                    <source src="./2. Desarrollo backend con Express/11. http methods.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -155,7 +155,7 @@
             <div>
                 <h3>12. reqres.in - put</h3>
                 <video controls>
-                    <source src="../2. Desarrollo backend con Express/12. reqres.in - put.mp4" type="video/mp4">
+                    <source src="./2. Desarrollo backend con Express/12. reqres.in - put.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -163,7 +163,7 @@
             <div>
                 <h3>13. reqres.in - patch</h3>
                 <video controls>
-                    <source src="../2. Desarrollo backend con Express/13. reqres.in - patch.mp4" type="video/mp4">
+                    <source src="./2. Desarrollo backend con Express/13. reqres.in - patch.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -171,7 +171,7 @@
             <div>
                 <h3>14. reqres.in - delete</h3>
                 <video controls>
-                    <source src="../2. Desarrollo backend con Express/14. reqres.in - delete.mp4" type="video/mp4">
+                    <source src="./2. Desarrollo backend con Express/14. reqres.in - delete.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
