--- a/index3.html
+++ b/index3.html
@@ -67,7 +67,7 @@
             <div>
                 <h3>1. Introducción</h3>
                 <video controls>
-                    <source src="../3. TypeScript/1. Introducción.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/1. Introducción.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -75,7 +75,7 @@
             <div>
                 <h3>2. Primeros pasos con TypeScript</h3>
                 <video controls>
-                    <source src="../3. TypeScript/2. Primeros pasos con TypeScript.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/2. Primeros pasos con TypeScript.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -83,7 +83,7 @@
             <div>
                 <h3>3. tsc --watch</h3>
                 <video controls>
-                    <source src="../3. TypeScript/3. tsc --watch.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/3. tsc --watch.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -91,7 +91,7 @@
             <div>
                 <h3>4. Constantes y variables</h3>
                 <video controls>
-                    <source src="../3. TypeScript/4. Constantes y variables.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/4. Constantes y variables.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -99,7 +99,7 @@
             <div>
                 <h3>5. Tipos de datos más comunes en TypeScript</h3>
                 <video controls>
-                    <source src="../3. TypeScript/5. Tipos de datos más comunes en TypeScript.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/5. Tipos de datos más comunes en TypeScript.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -107,7 +107,7 @@
             <div>
                 <h3>6. Objetos</h3>
                 <video controls>
-                    <source src="../3. TypeScript/6. Objetos.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/6. Objetos.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -115,7 +115,7 @@
             <div>
                 <h3>7. Tipos de datos personalizados</h3>
                 <video controls>
-                    <source src="../3. TypeScript/7. Tipos de datos personalizados.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/7. Tipos de datos personalizados.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -123,7 +123,7 @@
             <div>
                 <h3>8. archivo de configuración de TypeScript</h3>
                 <video controls>
-                    <source src="../3. TypeScript/8. archivo de configuración de TypeScript.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/8. archivo de configuración de TypeScript.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -131,7 +131,7 @@
             <div>
                 <h3>9. Clases</h3>
                 <video controls>
-                    <source src="../3. TypeScript/9. Clases.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/9. Clases.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -139,7 +139,7 @@
             <div>
                 <h3>10. Modificador de acceso private</h3>
                 <video controls>
-                    <source src="../3. TypeScript/10. Modificador de acceso private.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/10. Modificador de acceso private.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -147,7 +147,7 @@
             <div>
                 <h3>11. Herencia</h3>
                 <video controls>
-                    <source src="../3. TypeScript/11. Herencia.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/11. Herencia.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -155,7 +155,7 @@
             <div>
                 <h3>12. Clases abstractas</h3>
                 <video controls>
-                    <source src="../3. TypeScript/12. Clases abstractas.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/12. Clases abstractas.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -163,7 +163,7 @@
             <div>
                 <h3>13. Propiedades de solo lectura</h3>
                 <video controls>
-                    <source src="../3. TypeScript/13. Propiedades de solo lectura.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/13. Propiedades de solo lectura.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -171,7 +171,7 @@
             <div>
                 <h3>14. Getters y Setters</h3>
                 <video controls>
-                    <source src="../3. TypeScript/14. Getters y Setters.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/14. Getters y Setters.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -179,7 +179,7 @@
             <div>
                 <h3>15. Propiedades y métodos estáticos</h3>
                 <video controls>
-                    <source src="../3. TypeScript/15. Propiedades y métodos estáticos.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/15. Propiedades y métodos estáticos.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -187,7 +187,7 @@
             <div>
                 <h3>16. Propiedades y parámetros opcionales</h3>
                 <video controls>
-                    <source src="../3. TypeScript/16. Propiedades y parámetros opcionales.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/16. Propiedades y parámetros opcionales.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -195,7 +195,7 @@
             <div>
                 <h3>17. any</h3>
                 <video controls>
-                    <source src="../3. TypeScript/17. any.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/17. any.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -203,7 +203,7 @@
             <div>
                 <h3>18. Interfaces</h3>
                 <video controls>
-                    <source src="../3. TypeScript/18. Interfaces.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/18. Interfaces.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -211,7 +211,7 @@
             <div>
                 <h3>19. Non-Null Assertion Operator !</h3>
                 <video controls>
-                    <source src="../3. TypeScript/19. Non-Null Assertion Operator !.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/19. Non-Null Assertion Operator !.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -219,7 +219,7 @@
             <div>
                 <h3>20. Literal Types</h3>
                 <video controls>
-                    <source src="../3. TypeScript/20. Literal Types.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/20. Literal Types.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -227,7 +227,7 @@
             <div>
                 <h3>21. async  await</h3>
                 <video controls>
-                    <source src="../3. TypeScript/21. async  await.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/21. async  await.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -235,7 +235,7 @@
             <div>
                 <h3>22. Enums</h3>
                 <video controls>
-                    <source src="../3. TypeScript/22. Enums.mp4" type="video/mp4">
+                    <source src="./3. TypeScript/22. Enums.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
