--- a/index4.html
+++ b/index4.html
@@ -67,7 +67,7 @@
             <div>
                 <h3>1. Configurando el proyecto</h3>
                 <video controls>
-                    <source src="../4. Expressjs conTypeScript/1. Configurando el proyecto.mp4" type="video/mp4">
+                    <source src="./4. Expressjs conTypeScript/1. Configurando el proyecto.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -75,7 +75,7 @@
             <div>
                 <h3>2. Migrando a TypeScript  - parte 1</h3>
                 <video controls>
-                    <source src="../4. Expressjs conTypeScript/2. Migrando a TypeScript  - parte 1.mp4" type="video/mp4">
+                    <source src="./4. Expressjs conTypeScript/2. Migrando a TypeScript  - parte 1.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -83,7 +83,7 @@
             <div>
                 <h3>3. Migrando a TypeScript  - parte 2</h3>
                 <video controls>
-                    <source src="../4. Expressjs conTypeScript/3. Migrando a TypeScript  - parte 2.mp4" type="video/mp4">
+                    <source src="./4. Expressjs conTypeScript/3. Migrando a TypeScript  - parte 2.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -91,7 +91,7 @@
             <div>
                 <h3>4. Migrando a TypeScript  - parte 3</h3>
                 <video controls>
-                    <source src="../4. Expressjs conTypeScript/4. Migrando a TypeScript  - parte 3.mp4" type="video/mp4">
+                    <source src="./4. Expressjs conTypeScript/4. Migrando a TypeScript  - parte 3.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
