--- a/index5.html
+++ b/index5.html
@@ -67,7 +67,7 @@
             <div>
                 <h3>1. Introducción de la sección</h3>
                 <video controls>
-                    <source src="../5. Introducción a Mongo DB/1. Introducción de la sección.mp4" type="video/mp4">
+                    <source src="./5. Introducción a Mongo DB/1. Introducción de la sección.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -75,7 +75,7 @@
             <div>
                 <h3>2. Instalación en macOS</h3>
                 <video controls>
-                    <source src="../5. Introducción a Mongo DB/2. Instalación en macOS.mp4" type="video/mp4">
+                    <source src="./5. Introducción a Mongo DB/2. Instalación en macOS.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -83,7 +83,7 @@
             <div>
                 <h3>3. Un poco de teoría</h3>
                 <video controls>
-                    <source src="../5. Introducción a Mongo DB/3. Un poco de teoría.mp4" type="video/mp4">
+                    <source src="./5. Introducción a Mongo DB/3. Un poco de teoría.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -91,7 +91,7 @@
             <div>
                 <h3>4. Guardando datos en MongoDB</h3>
                 <video controls>
-                    <source src="../5. Introducción a Mongo DB/4. Guardando datos en MongoDB.mp4" type="video/mp4">
+                    <source src="./5. Introducción a Mongo DB/4. Guardando datos en MongoDB.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -99,7 +99,7 @@
             <div>
                 <h3>5. Buscar datos con find</h3>
                 <video controls>
-                    <source src="../5. Introducción a Mongo DB/5. Buscar datos con find.mp4" type="video/mp4">
+                    <source src="./5. Introducción a Mongo DB/5. Buscar datos con find.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -107,7 +107,7 @@
             <div>
                 <h3>6. Filtrado de datos con and y or</h3>
                 <video controls>
-                    <source src="../5. Introducción a Mongo DB/6. Filtrado de datos con and y or.mp4" type="video/mp4">
+                    <source src="./5. Introducción a Mongo DB/6. Filtrado de datos con and y or.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -115,7 +115,7 @@
             <div>
                 <h3>7. FindOne</h3>
                 <video controls>
-                    <source src="../5. Introducción a Mongo DB/7. FindOne.mp4" type="video/mp4">
+                    <source src="./5. Introducción a Mongo DB/7. FindOne.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
