--- a/index6.html
+++ b/index6.html
@@ -67,7 +67,7 @@
             <div>
                 <h3>1. Introducción</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/1. Introducción.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/1. Introducción.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -75,7 +75,7 @@
             <div>
                 <h3>2. Conectando a una base datos mongo desde node.js y express.js</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/2. Conectando a una base datos mongo desde node.js y express.js.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/2. Conectando a una base datos mongo desde node.js y express.js.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -83,7 +83,7 @@
             <div>
                 <h3>3. Mongo online con Clever Cloud</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/3. Mongo online con Clever Cloud.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/3. Mongo online con Clever Cloud.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -91,7 +91,7 @@
             <div>
                 <h3>4. Variables de entorno</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/4. Variables de entorno.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/4. Variables de entorno.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -99,7 +99,7 @@
             <div>
                 <h3>5. Creando el Schema para los usuarios</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/5. Creando el Schema para los usuarios.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/5. Creando el Schema para los usuarios.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -107,7 +107,7 @@
             <div>
                 <h3>6. Interfaces para nuestros schemas</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/6. Interfaces para nuestros schemas.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/6. Interfaces para nuestros schemas.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -115,7 +115,7 @@
             <div>
                 <h3>7. bcrypt</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/7. bcrypt.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/7. bcrypt.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -123,7 +123,7 @@
             <div>
                 <h3>8. MongoError</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/8. MongoError.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/8. MongoError.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -131,7 +131,7 @@
             <div>
                 <h3>9. Recuperar ciertos campos al momento de realizar la consulta</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/9. Recuperar ciertos campos al momento de realizar la consulta.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/9. Recuperar ciertos campos al momento de realizar la consulta.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -139,7 +139,7 @@
             <div>
                 <h3>10. Definiendo el Schema para los productos</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/10. Definiendo el Schema para los productos.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/10. Definiendo el Schema para los productos.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -147,7 +147,7 @@
             <div>
                 <h3>11. Guardar un producto</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/11. Guardar un producto.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/11. Guardar un producto.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -155,7 +155,7 @@
             <div>
                 <h3>12. Listando los productos</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/12. Listando los productos.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/12. Listando los productos.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -163,7 +163,7 @@
             <div>
                 <h3>13. put - Actualizando un producto</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/13. put - Actualizando un producto.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/13. put - Actualizando un producto.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -171,7 +171,7 @@
             <div>
                 <h3>14. patch - Actualizando un producto</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/14. patch - Actualizando un producto.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/14. patch - Actualizando un producto.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -179,7 +179,7 @@
             <div>
                 <h3>15. Eliminar un producto</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/15. Eliminar un producto.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/15. Eliminar un producto.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -187,7 +187,7 @@
             <div>
                 <h3>16. Validando ids de mongo</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/16. Validando ids de mongo.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/16. Validando ids de mongo.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -195,7 +195,7 @@
             <div>
                 <h3>17. Populate</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/17. Populate.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/17. Populate.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -203,7 +203,7 @@
             <div>
                 <h3>18. Eliminar un usuario</h3>
                 <video controls>
-                    <source src="../6. Express.js con Mongo DB/18. Eliminar un usuario.mp4" type="video/mp4">
+                    <source src="./6. Express.js con Mongo DB/18. Eliminar un usuario.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
