--- a/index7.html
+++ b/index7.html
@@ -67,7 +67,7 @@
             <div>
                 <h3>1. Organizando las rutas</h3>
                 <video controls>
-                    <source src="../7. Json Web Tokens y validaciones/1. Organizando las rutas.mp4" type="video/mp4">
+                    <source src="./7. Json Web Tokens y validaciones/1. Organizando las rutas.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -75,7 +75,7 @@
             <div>
                 <h3>2. Creando la ruta de login</h3>
                 <video controls>
-                    <source src="../7. Json Web Tokens y validaciones/2. Creando la ruta de login.mp4" type="video/mp4">
+                    <source src="./7. Json Web Tokens y validaciones/2. Creando la ruta de login.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -83,7 +83,7 @@
             <div>
                 <h3>3. Generando un token con jwt</h3>
                 <video controls>
-                    <source src="../7. Json Web Tokens y validaciones/3. Generando un token con jwt.mp4" type="video/mp4">
+                    <source src="./7. Json Web Tokens y validaciones/3. Generando un token con jwt.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -91,7 +91,7 @@
             <div>
                 <h3>4. Middlewares - parte 1</h3>
                 <video controls>
-                    <source src="../7. Json Web Tokens y validaciones/4. Middlewares - parte 1.mp4" type="video/mp4">
+                    <source src="./7. Json Web Tokens y validaciones/4. Middlewares - parte 1.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -99,7 +99,7 @@
             <div>
                 <h3>5. Middlewares - parte 2</h3>
                 <video controls>
-                    <source src="../7. Json Web Tokens y validaciones/5. Middlewares - parte 2.mp4" type="video/mp4">
+                    <source src="./7. Json Web Tokens y validaciones/5. Middlewares - parte 2.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -107,7 +107,7 @@
             <div>
                 <h3>6. Middlewares - parte 3</h3>
                 <video controls>
-                    <source src="../7. Json Web Tokens y validaciones/6. Middlewares - parte 3.mp4" type="video/mp4">
+                    <source src="./7. Json Web Tokens y validaciones/6. Middlewares - parte 3.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -115,7 +115,7 @@
             <div>
                 <h3>7. Validaciones - parte 1</h3>
                 <video controls>
-                    <source src="../7. Json Web Tokens y validaciones/7. Validaciones - parte 1.mp4" type="video/mp4">
+                    <source src="./7. Json Web Tokens y validaciones/7. Validaciones - parte 1.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -123,7 +123,7 @@
             <div>
                 <h3>8. Validaciones - parte 2</h3>
                 <video controls>
-                    <source src="../7. Json Web Tokens y validaciones/8. Validaciones - parte 2.mp4" type="video/mp4">
+                    <source src="./7. Json Web Tokens y validaciones/8. Validaciones - parte 2.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -131,7 +131,7 @@
             <div>
                 <h3>9. Validaciones - parte 3</h3>
                 <video controls>
-                    <source src="../7. Json Web Tokens y validaciones/9. Validaciones - parte 3.mp4" type="video/mp4">
+                    <source src="./7. Json Web Tokens y validaciones/9. Validaciones - parte 3.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
@@ -139,7 +139,7 @@
             <div>
                 <h3>10. Fin del curso</h3>
                 <video controls>
-                    <source src="../7. Json Web Tokens y validaciones/10. Fin del curso.mp4" type="video/mp4">
+                    <source src="./7. Json Web Tokens y validaciones/10. Fin del curso.mp4" type="video/mp4">
                     Tu navegador no soporta la etiqueta de video.
                 </video>
             </div>
