--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <!DOCTYPE html>
     <html lang="es">
     <head>
+        <!-- comentario -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>1. Introducción a Nodejs</title>
